--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 
 Voter.ApiURl= https://api-preproduction.signzy.app/api/v3/voterid/detailedSearch
-
+Search.ApiURl=https://api-preproduction.signzy.app/api/v3/voterid/search
 
 
 api.key=QU84WINO9dKPYohSvdXcMlAFR40jkfZS
