--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,21 @@
 
 
 
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/VoterDB
+spring.datasource.username=postgres
+spring.datasource.password=vereesh@1425
+spring.jpa.show-sql=true
+
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+
 Voter.ApiURl= https://api-preproduction.signzy.app/api/v3/voterid/detailedSearch
 Search.ApiURl=https://api-preproduction.signzy.app/api/v3/voterid/search
 
